--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,38 +15,18 @@
   </header>
 
   <main>
+    {% if page.url != "/" %}
+    <h1>{{ page.title }}</h1>
+    {% endif %}
+
     {{ content }}
   </main>
 
   <footer class="site-footer">
     <p>&copy; {{ site.time | date: '%Y' }} HubeiLaoCast. All rights reserved.</p>
   </footer>
+
+  <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </body>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    // Change this ID to match your generated TOC
-    const toc = document.getElementById('markdown-toc');
-
-    if (!toc) {
-      return;
-    }
-
-    const itemsWithChildren = toc.querySelectorAll('li');
-
-    itemsWithChildren.forEach(item => {
-      const nestedList = item.querySelector('ul');
-      if (nestedList) {
-        item.classList.add('has-nested');
-
-        const link = item.querySelector('a');
-
-        link.addEventListener('click', function (event) {
-          event.preventDefault();
-          item.classList.toggle('open');
-        });
-      }
-    });
-  });
-</script>
 
 </html>
