add copy button for links block

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
   </footer>
 
   <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/copy-code.js' | relative_url }}"></script>
 </body>
 
 </html>
