--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
-
   <link rel="stylesheet" href="{{ 'assets/css/style.css' | relative_url }}">
 </head>
 
 <body>
   <header class="site-header">
-    <h1><a href="/">{{ site.title }}</a></h1>
+    
+    {% if page.url == "/" %}
+      <h1 class="site-title"><a href="/">{{ site.title }}</a></h1>
+    {% else %}
+      <p class="site-title"><a href="/">{{ site.title }}</a></p>
+    {% endif %}
+
   </header>
 
   <main>
