--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,7 +43,7 @@ main,
 
 main {
   background-color: #ffffff;
-  padding: 2rem 3rem;
+  padding: 1rem 3rem;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
 }
@@ -86,6 +86,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+  margin-top: 0;
   font-size: 2em;
   // This h1 rule will be used by your main page title
 }
@@ -220,6 +221,7 @@ div.highlight {
 
   li {
     padding: 5px 0;
+    margin: 0;
     padding-left: 20px; // Indent sub-items
     position: relative;
 
