--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,8 @@
 
   </header>
 
-  <main>
-    {% if page.url != "/" %}
+  <main class="{{ page.page-class }}">
     <h1>{{ page.title }}</h1>
-    {% endif %}
 
     {{ content }}
   </main>
