--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -257,3 +257,18 @@ div.highlight {
     display: none; // Hide nested lists by default
   }
 }
+
+/* --- Accessibility Helpers --- */
+
+// Hides content visually but keeps it accessible to screen readers
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap; 
+}
