--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
   <link rel="stylesheet" href="{{ 'assets/css/style.css' | relative_url }}">
+
+  <link rel="icon" href="{{ 'favicon.ico' | relative_url }}">
+  <link rel="icon" href="{{ '/assets/img/Awakening from CPTSD - A Somatic Guide to Self-Healing.png' | relative_url }}" type="image/png">
 </head>
 
 <body>
